# WaifuGalEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
engine/: CMakeLists.txt  choiceview.cpp  choiceview.h  galaction.h  game.cpp  game.h  gameitem.cpp  gameitem.h  imageprovider.cpp  imageprovider.h  main.cpp  stage.cpp  stage.h  textbar.cpp  textbar.h
engine/presets/: basicaction.cpp  basicaction.h  basicmotion.cpp  basicmotion.h
engine/qml/: main.qml
testres/: image.qrc
